fix: readability solved with indigo pink theme

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,7 @@
 .main-content {
     min-height: 100vh;
 }
-mat-sidenav {
-    width: 200px;
-    padding: 8px;
-}
+
 app-navbar {
     position: fixed;
     top: 0;
