--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@angular/material/theming';
-
+/*@import '~@angular/material/theming';
+@import 'scss/_variables.scss';
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // **Be sure that you only ever include this mixin once!**
 @include mat-core();
+@include angular-material-theme($app-theme);
+*/
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 
-
-// Define an alternate dark theme.
-$dark-primary: mat-palette($mat-indigo);
-$dark-accent:  mat-palette($mat-pink, A200, A200, A400);
-$dark-warn:    mat-palette($mat-deep-orange);
-$dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
-
-// Include the alternative theme styles inside of a block with a CSS class. You can make this
-// CSS class whatever you want. In this example, any component inside of an element with
-// `.unicorn-dark-theme` will be affected by this alternate dark theme instead of the default theme.
-
-@include angular-material-theme($dark-theme);
 
 .spacer {
     flex: 1 1 auto;
